--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 	<body>
 		<h1>Pan Tadeusz czyli ostatni zajazd na
 		Litwie: historia szlachecka z roku 1811 i 1812 
-		we dwunastu ksiÄ™gach wierszem
+		we dwunastu ksiêgach wierszem
 		</h1>
-		<p>Spis treÅ›ci</p>
+		<p>Spis treœci</p>
 		<ul>
-			<li><a href="./k1.html">KsiÄ™ga 1</a><li>
-			<li><a href="./k2.html">KsiÄ™ga 2</a><li>
-			<li><a href="./k3.html">KsiÄ™ga 3</a><li>
-			<li><a href="./k5.html">KsiÄ™ga 5</a><li>
-			<li><a href="./k6.html">KsiÄ™ga 6</a><li>
-			<li><a href="./k7.html">KsiÄ™ga 7</a><li>
-			<li><a href="./k9.html">KsiÄ™ga 9</a><li>
-			<li><a href="./k11.html">KsiÄ™ga 11</a><li>
-			<li><a href="./k12.html">KsiÄ™ga 12</a><li>
+			<li><a href="./k1.html">Ksiêga 1</a><li>
+			<li><a href="./k2.html">Ksiêga 2</a><li>
+			<li><a href="./k3.html">Ksiêga 3</a><li>
+			<li><a href="./k4.html">Ksiêga 4</a><li>
+			<li><a href="./k5.html">Ksiêga 5</a><li>
+			<li><a href="./k6.html">Ksiêga 6</a><li>
+			<li><a href="./k7.html">Ksiêga 7</a><li>
+			<li><a href="./k8.html">Ksiêga 8</a><li>
+			<li><a href="./k9.html">Ksiêga 9</a><li>
+			<li><a href="./k10.html">Ksiêga 10</a><li>
+			<li><a href="./k11.html">Ksiêga 11</a><li>
+			<li><a href="./k12.html">Ksiêga 12</a><li>
 		</ul>
 	</body>		
 	<head>
